--- a/A-T-M-S-javafx/src/a/t/m/s/javafx/FXMLDocument.fxml
+++ b/A-T-M-S-javafx/src/a/t/m/s/javafx/FXMLDocument.fxml
@@ -1,14 +1,23 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import java.util.*?>
-<?import javafx.scene.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.PasswordField?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.text.Font?>
+<?import javafx.scene.text.Text?>
 
-<AnchorPane id="AnchorPane" prefHeight="200" prefWidth="320" xmlns:fx="http://javafx.com/fxml/1" fx:controller="a.t.m.s.javafx.FXMLDocumentController">
+<AnchorPane id="AnchorPane" prefHeight="600.0" prefWidth="800.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/20.0.1" fx:controller="a.t.m.s.javafx.FXMLDocumentController">
     <children>
-        <Button layoutX="126" layoutY="90" text="Click Me!" onAction="#handleButtonAction" fx:id="button" />
-        <Label layoutX="126" layoutY="120" minHeight="16" minWidth="69" fx:id="label" />
+        <Button fx:id="button" layoutX="571.0" layoutY="413.0" onAction="#handleButtonAction" text="Submit" />
+      <TextField layoutX="501.0" layoutY="300.0" prefHeight="25.0" prefWidth="194.0" promptText="Enter your username" />
+      <Text layoutX="501.0" layoutY="287.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Username" wrappingWidth="103.13671875" />
+      <Text layoutX="501.0" layoutY="352.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Password" wrappingWidth="103.13671875" />
+      <PasswordField layoutX="501.0" layoutY="366.0" prefHeight="25.0" prefWidth="194.0" />
+      <Text layoutX="461.0" layoutY="209.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Attendance-Management-System">
+         <font>
+            <Font name="Calibri Italic" size="20.0" />
+         </font>
+      </Text>
     </children>
 </AnchorPane>
