--- a/Ats/src/ats/FXMLDocument.fxml
+++ b/Ats/src/ats/FXMLDocument.fxml
@@ -1,14 +1,41 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import java.util.*?>
-<?import javafx.scene.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ChoiceBox?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.Pane?>
+<?import javafx.scene.text.Font?>
+<?import javafx.scene.text.Text?>
 
-<AnchorPane id="AnchorPane" prefHeight="200" prefWidth="320" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ats.FXMLDocumentController">
-    <children>
-        <Button layoutX="126" layoutY="90" text="Click Me!" onAction="#handleButtonAction" fx:id="button" />
-        <Label layoutX="126" layoutY="120" minHeight="16" minWidth="69" fx:id="label" />
-    </children>
+<AnchorPane id="AnchorPane" prefHeight="600.0" prefWidth="1000.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/20.0.1" fx:controller="ats.FXMLDocumentController">
+   <children>
+      <Pane layoutX="-3.0" prefHeight="600.0" prefWidth="528.0" style="-fx-background-color: #FFFDF6;" />
+      <ImageView fitHeight="139.0" fitWidth="200.0" layoutX="164.0" layoutY="174.0">
+         <image>
+            <Image url="@../image/SMUCT%20Logo.png" />
+         </image>
+      </ImageView>
+      <Text layoutX="57.0" layoutY="357.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Shanto-Mariam University of Creative Technology" wrappingWidth="413.90625">
+         <font>
+            <Font name="Calibri Bold Italic" size="20.0" />
+         </font>
+      </Text>
+      <Pane layoutX="522.0" prefHeight="600.0" prefWidth="478.0" style="-fx-background-color: #FAF6E9;" />
+      <TextField fx:id="userID" layoutX="668.0" layoutY="307.0" prefHeight="25.0" prefWidth="194.0" promptText="User ID" stylesheets="@../style/style.css" />
+      <TextField fx:id="userPass" layoutX="668.0" layoutY="359.0" prefHeight="25.0" prefWidth="194.0" promptText="User Password" stylesheets="@../style/style.css" />
+      <Text layoutX="668.0" layoutY="215.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Attendance System" textAlignment="CENTER" wrappingWidth="194.0">
+         <font>
+            <Font name="Calibri Bold Italic" size="20.0" />
+         </font>
+      </Text>
+      <ChoiceBox fx:id="whoSelect" layoutX="668.0" layoutY="254.0" prefHeight="25.0" prefWidth="194.0" stylesheets="@../style/style.css" />
+      <Button fx:id="u_ID_pass_Submit" layoutX="718.0" layoutY="410.0" mnemonicParsing="false" onAction="#u_ID_pass_Submit" prefHeight="33.0" prefWidth="91.0" stylesheets="@../style/style.css" text="Submit">
+         <font>
+            <Font name="Arial" size="16.0" />
+         </font>
+      </Button>
+   </children>
 </AnchorPane>
