--- a/Ats/src/ats/FXMLDocument.fxml
+++ b/Ats/src/ats/FXMLDocument.fxml
@@ -10,7 +10,7 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane id="AnchorPane" prefHeight="600.0" prefWidth="1000.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/20.0.1" fx:controller="ats.FXMLDocumentController">
+<AnchorPane id="AnchorPane" prefHeight="600.0" prefWidth="1000.0" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ats.FXMLDocumentController">
    <children>
       <Pane layoutX="-3.0" prefHeight="600.0" prefWidth="528.0" style="-fx-background-color: #FFFDF6;" />
       <ImageView fitHeight="139.0" fitWidth="200.0" layoutX="164.0" layoutY="174.0">
@@ -32,9 +32,9 @@
          </font>
       </Text>
       <ChoiceBox fx:id="whoSelect" layoutX="668.0" layoutY="254.0" prefHeight="25.0" prefWidth="194.0" stylesheets="@../style/style.css" />
-      <Button fx:id="u_ID_pass_Submit" layoutX="718.0" layoutY="410.0" mnemonicParsing="false" onAction="#u_ID_pass_Submit" prefHeight="33.0" prefWidth="91.0" stylesheets="@../style/style.css" text="Submit">
+      <Button fx:id="u_ID_pass_Submit" layoutX="721.0" layoutY="410.0" mnemonicParsing="false" onAction="#u_ID_pass_Submit" prefHeight="20.0" prefWidth="88.0" stylesheets="@../style/style.css" text="Submit">
          <font>
-            <Font name="Arial" size="16.0" />
+            <Font name="Arial" size="14.0" />
          </font>
       </Button>
    </children>
