--- a/Ats/src/style/style.css
+++ b/Ats/src/style/style.css
@@ -1,3 +1,7 @@
 .input{
-    background-color: A0C878;
+    background-color: #000;
+}
+.bg-color{
+    background-color: #000;
+    color: #000;
 }
