--- a/Ats/src/ats/admin.fxml
+++ b/Ats/src/ats/admin.fxml
@@ -1,8 +1,17 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.control.Label?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.Pane?>
+<?import javafx.scene.text.Text?>
 
-
-<AnchorPane id="AnchorPane" prefHeight="767.0" prefWidth="1300.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/20.0.1" fx:controller="ats.AdminController">
-    
+<AnchorPane id="AnchorPane" prefHeight="767.0" prefWidth="1300.0" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ats.AdminController">
+   <children>
+      <Pane prefHeight="60.0" prefWidth="1300.0" style="-fx-background-color: #ddd;">
+         <children>
+            <Text layoutX="28.0" layoutY="35.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Your ID :" />
+            <Label fx:id="adminId" layoutX="85.0" layoutY="22.0" prefHeight="17.0" prefWidth="137.0" style="-fx-background-color: #ccc;" />
+         </children>
+      </Pane>
+   </children>
 </AnchorPane>
