--- a/Ats/src/ats/admin.fxml
+++ b/Ats/src/ats/admin.fxml
@@ -1,16 +1,57 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.Pane?>
+<?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane id="AnchorPane" prefHeight="767.0" prefWidth="1300.0" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ats.AdminController">
+<AnchorPane id="AnchorPane" fx:id="candidate_ast" prefHeight="767.0" prefWidth="1300.0" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ats.AdminController">
    <children>
-      <Pane prefHeight="60.0" prefWidth="1300.0" style="-fx-background-color: #ddd;">
+      <Pane prefHeight="84.0" prefWidth="1300.0" style="-fx-background-color: #27548A;">
          <children>
-            <Text layoutX="28.0" layoutY="35.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Your ID :" />
-            <Label fx:id="adminId" layoutX="85.0" layoutY="22.0" prefHeight="17.0" prefWidth="137.0" style="-fx-background-color: #ccc;" />
+            <Text fill="WHITE" layoutX="1087.0" layoutY="36.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Your ID :">
+               <font>
+                  <Font name="System Bold" size="12.0" />
+               </font></Text>
+            <Label fx:id="admin_Id" layoutX="1140.0" layoutY="21.0" prefHeight="20.0" prefWidth="137.0" style="-fx-background-color: #fff; -fx-background-radius: 3px;" text="cssa" textAlignment="CENTER">
+               <padding>
+                  <Insets bottom="1.0" left="10.0" />
+               </padding></Label>
+            <Text fill="WHITE" layoutX="113.0" layoutY="33.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Shanto-Mariam University of Creative Technology">
+               <font>
+                  <Font name="System Bold" size="20.0" />
+               </font>
+            </Text>
+            <Label layoutX="14.0" layoutY="10.0" prefHeight="65.0" prefWidth="83.0" style="-fx-background-color: #fff; -fx-background-radius: 3px;" />
+            <ImageView fitHeight="51.0" fitWidth="74.0" layoutX="21.0" layoutY="17.0" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@../image/SMUCT%20Logo.png" />
+               </image>
+            </ImageView>
+            <Text fill="WHITE" layoutX="1072.0" layoutY="60.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Candidate : ">
+               <font>
+                  <Font name="System Bold" size="12.0" />
+               </font>
+            </Text>
+            <Label fx:id="admin_Ast" layoutX="1140.0" layoutY="45.0" prefHeight="20.0" prefWidth="137.0" style="-fx-background-color: #fff; -fx-background-radius: 3px;" text="cssa" textAlignment="CENTER">
+               <padding>
+                  <Insets bottom="1.0" left="10.0" />
+               </padding>
+            </Label>
+            <Text fill="WHITE" layoutX="113.0" layoutY="54.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Permanent Campus Plot# 06, Avenue# 06">
+               <font>
+                  <Font size="11.0" />
+               </font>
+            </Text>
+            <Text fill="WHITE" layoutX="113.0" layoutY="69.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Sector# 17/H-1,Uttara, Dhaka-1230, Dhaka 1230">
+               <font>
+                  <Font size="11.0" />
+               </font>
+            </Text>
          </children>
       </Pane>
    </children>
