--- a/Ats/src/ats/Student.fxml
+++ b/Ats/src/ats/Student.fxml
@@ -1,11 +1,61 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import java.util.*?>
-<?import javafx.scene.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
+<?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.Pane?>
+<?import javafx.scene.text.Font?>
+<?import javafx.scene.text.Text?>
 
-<AnchorPane id="AnchorPane" prefHeight="400.0" prefWidth="600.0" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ats.StudentController">
-    
+
+<AnchorPane id="AnchorPane" prefHeight="850.0" prefWidth="1300.0" style="-fx-background-color: #06202B;" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/20.0.1" fx:controller="ats.StudentController">
+   <children>
+      <Pane prefHeight="85.0" prefWidth="1300.0" style="-fx-background-color: #27548A;">
+         <children>
+            <Label layoutX="23.0" layoutY="5.0" prefHeight="73.0" prefWidth="103.0" style="-fx-background-color: #FFF; -fx-background-radius: 3px;" />
+            <ImageView fitHeight="64.0" fitWidth="92.0" layoutX="28.0" layoutY="10.0" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@../image/SMUCT%20Logo.png" />
+               </image>
+            </ImageView>
+            <Text fill="WHITE" layoutX="1085.0" layoutY="36.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Your ID :">
+               <font>
+                  <Font name="System Bold" size="12.0" />
+               </font>
+            </Text>
+            <Label fx:id="std_id" layoutX="1138.0" layoutY="21.0" prefHeight="20.0" prefWidth="137.0" style="-fx-background-color: #fff; -fx-background-radius: 3px;" text="{data:inport}" textAlignment="CENTER">
+               <padding>
+                  <Insets bottom="1.0" left="10.0" />
+               </padding>
+            </Label>
+            <Text fill="WHITE" layoutX="1070.0" layoutY="60.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Candidate : ">
+               <font>
+                  <Font name="System Bold" size="12.0" />
+               </font>
+            </Text>
+            <Label fx:id="std_Ast" layoutX="1138.0" layoutY="45.0" prefHeight="20.0" prefWidth="137.0" style="-fx-background-color: #fff; -fx-background-radius: 3px;" text="{data:inport}" textAlignment="CENTER">
+               <padding>
+                  <Insets bottom="1.0" left="10.0" />
+               </padding>
+            </Label>
+            <Text fill="WHITE" layoutX="134.0" layoutY="32.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Shanto-Mariam University of Creative Technology">
+               <font>
+                  <Font name="System Bold" size="20.0" />
+               </font>
+            </Text>
+            <Text fill="WHITE" layoutX="134.0" layoutY="56.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Permanent Campus Plot# 06, Avenue# 06">
+               <font>
+                  <Font size="11.0" />
+               </font>
+            </Text>
+            <Text fill="WHITE" layoutX="134.0" layoutY="72.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Sector# 17/H-1,Uttara, Dhaka-1230, Dhaka 1230">
+               <font>
+                  <Font size="11.0" />
+               </font>
+            </Text>
+         </children>
+      </Pane>
+   </children>
 </AnchorPane>
