--- a/Ats/src/ats/teacher.fxml
+++ b/Ats/src/ats/teacher.fxml
@@ -9,18 +9,20 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane id="AnchorPane" fx:id="candidate_ast" prefHeight="767.0" prefWidth="1300.0" style="-fx-background-color: #06202B;" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ats.AdminController">
+<AnchorPane id="AnchorPane" prefHeight="850.0" prefWidth="1300.0" style="-fx-background-color: #06202B;" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ats.TeacherController">
    <children>
       <Pane prefHeight="85.0" prefWidth="1300.0" style="-fx-background-color: #27548A;">
          <children>
             <Text fill="WHITE" layoutX="1087.0" layoutY="36.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Your ID :">
                <font>
                   <Font name="System Bold" size="12.0" />
-               </font></Text>
-            <Label fx:id="admin_Id" layoutX="1140.0" layoutY="21.0" prefHeight="20.0" prefWidth="137.0" style="-fx-background-color: #fff; -fx-background-radius: 3px;" text="{data:inport}" textAlignment="CENTER">
+               </font>
+            </Text>
+            <Label fx:id="tec_Id" layoutX="1140.0" layoutY="21.0" prefHeight="20.0" prefWidth="137.0" style="-fx-background-color: #fff; -fx-background-radius: 3px;" text="{data:inport}" textAlignment="CENTER">
                <padding>
                   <Insets bottom="1.0" left="10.0" />
-               </padding></Label>
+               </padding>
+            </Label>
             <Text fill="WHITE" layoutX="113.0" layoutY="33.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Shanto-Mariam University of Creative Technology">
                <font>
                   <Font name="System Bold" size="20.0" />
@@ -37,7 +39,7 @@
                   <Font name="System Bold" size="12.0" />
                </font>
             </Text>
-            <Label fx:id="admin_Ast" layoutX="1140.0" layoutY="45.0" prefHeight="20.0" prefWidth="137.0" style="-fx-background-color: #fff; -fx-background-radius: 3px;" text="{data:inport}" textAlignment="CENTER">
+            <Label fx:id="tec_Ast" layoutX="1140.0" layoutY="45.0" prefHeight="20.0" prefWidth="137.0" style="-fx-background-color: #fff; -fx-background-radius: 3px;" text="{data:inport}" textAlignment="CENTER">
                <padding>
                   <Insets bottom="1.0" left="10.0" />
                </padding>
