--- a/Ats/src/ats/admin.fxml
+++ b/Ats/src/ats/admin.fxml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
@@ -9,7 +10,7 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane id="AnchorPane" fx:id="candidate_ast" prefHeight="767.0" prefWidth="1300.0" style="-fx-background-color: #06202B;" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ats.AdminController">
+<AnchorPane id="AnchorPane" fx:id="candidate_ast" prefHeight="767.0" prefWidth="1300.0" style="-fx-background-color: #222831;" stylesheets="@../style/style.css" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ats.AdminController">
    <children>
       <Pane prefHeight="85.0" prefWidth="1300.0" style="-fx-background-color: #27548A;">
          <children>
@@ -21,7 +22,7 @@
                <padding>
                   <Insets bottom="1.0" left="10.0" />
                </padding></Label>
-            <Text fill="WHITE" layoutX="113.0" layoutY="33.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Shanto-Mariam University of Creative Technology">
+            <Text fill="WHITE" layoutX="113.0" layoutY="31.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Shanto-Mariam University of Creative Technology">
                <font>
                   <Font name="System Bold" size="20.0" />
                </font>
@@ -42,16 +43,60 @@
                   <Insets bottom="1.0" left="10.0" />
                </padding>
             </Label>
-            <Text fill="WHITE" layoutX="113.0" layoutY="54.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Permanent Campus Plot# 06, Avenue# 06">
+            <Text fill="WHITE" layoutX="113.0" layoutY="57.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Permanent Campus Plot# 06, Avenue# 06">
                <font>
                   <Font size="11.0" />
                </font>
             </Text>
-            <Text fill="WHITE" layoutX="113.0" layoutY="69.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Sector# 17/H-1,Uttara, Dhaka-1230, Dhaka 1230">
+            <Text fill="WHITE" layoutX="113.0" layoutY="71.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Sector# 17/H-1,Uttara, Dhaka-1230, Dhaka 1230">
                <font>
                   <Font size="11.0" />
                </font>
             </Text>
+         </children>
+      </Pane>
+      <Pane layoutY="85.0" prefHeight="682.0" prefWidth="234.0" style="-fx-background-color: #183B4E;">
+         <children>
+            <Button mnemonicParsing="false" prefHeight="25.0" prefWidth="234.0" style="-fx-background-color: #547792; -fx-border-color: #000;" stylesheets="@../style/style.css" text="{data: fx-Button}" textFill="WHITE">
+               <font>
+                  <Font name="System Bold" size="12.0" />
+               </font>
+            </Button>
+            <Button layoutY="25.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="234.0" style="-fx-background-color: #547792; -fx-border-color: #000;" stylesheets="@../style/style.css" text="{data: fx-Button}" textFill="WHITE">
+               <font>
+                  <Font name="System Bold" size="12.0" />
+               </font>
+            </Button>
+            <Button layoutY="50.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="234.0" style="-fx-background-color: #547792; -fx-border-color: #000;" stylesheets="@../style/style.css" text="{data: fx-Button}" textFill="WHITE">
+               <font>
+                  <Font name="System Bold" size="12.0" />
+               </font>
+            </Button>
+            <Button layoutY="75.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="234.0" style="-fx-background-color: #547792; -fx-border-color: #000;" stylesheets="@../style/style.css" text="{data: fx-Button}" textFill="WHITE">
+               <font>
+                  <Font name="System Bold" size="12.0" />
+               </font>
+            </Button>
+            <Button layoutY="100.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="234.0" style="-fx-background-color: #547792; -fx-border-color: #000;" stylesheets="@../style/style.css" text="{data: fx-Button}" textFill="WHITE">
+               <font>
+                  <Font name="System Bold" size="12.0" />
+               </font>
+            </Button>
+            <Button layoutY="125.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="234.0" style="-fx-background-color: #547792; -fx-border-color: #000;" stylesheets="@../style/style.css" text="{data: fx-Button}" textFill="WHITE">
+               <font>
+                  <Font name="System Bold" size="12.0" />
+               </font>
+            </Button>
+            <Button layoutY="150.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="234.0" style="-fx-background-color: #547792; -fx-border-color: #000;" stylesheets="@../style/style.css" text="{data: fx-Button}" textFill="WHITE">
+               <font>
+                  <Font name="System Bold" size="12.0" />
+               </font>
+            </Button>
+            <Button layoutY="175.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="234.0" style="-fx-background-color: #547792; -fx-border-color: #000;" stylesheets="@../style/style.css" text="{data: fx-Button}" textFill="WHITE">
+               <font>
+                  <Font name="System Bold" size="12.0" />
+               </font>
+            </Button>
          </children>
       </Pane>
    </children>
