--- a/Ats/src/ats/FXMLDocument.fxml
+++ b/Ats/src/ats/FXMLDocument.fxml
@@ -12,7 +12,7 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane id="AnchorPane" prefHeight="600.0" prefWidth="1000.0" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ats.FXMLDocumentController">
+<AnchorPane prefHeight="600.0" prefWidth="1000.0" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ats.FXMLDocumentController">
    <children>
       <Pane layoutX="-3.0" prefHeight="600.0" prefWidth="528.0" style="-fx-background-color: #FFFDF6;">
          <children>
@@ -21,7 +21,7 @@
                   <Font size="11.0" />
                </font>
             </Text>
-            <Text layoutX="193.0" layoutY="388.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Permanent Campus Plot# 06, Avenue# 06" textAlignment="CENTER">
+            <Text layoutX="193.0" layoutY="388.0" strokeType="OUTSIDE" strokeWidth="0.0" styleClass="font" text="Permanent Campus Plot# 06, Avenue# 06" textAlignment="CENTER">
                <font>
                   <Font size="11.0" />
                </font>
@@ -36,6 +36,10 @@
          <font>
             <Font name="Calibri Bold Italic" size="20.0" />
          </font>
+         <styleClass>
+            <String fx:value="button" />
+            <String fx:value="font" />
+         </styleClass>
       </Text>
       <Pane layoutX="522.0" prefHeight="600.0" prefWidth="478.0" style="-fx-background-color: #FAF6E9;">
          <children>
