--- a/Ats/src/ats/Student.fxml
+++ b/Ats/src/ats/Student.fxml
@@ -9,8 +9,7 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-
-<AnchorPane id="AnchorPane" prefHeight="850.0" prefWidth="1300.0" style="-fx-background-color: #06202B;" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/20.0.1" fx:controller="ats.StudentController">
+<AnchorPane id="AnchorPane" prefHeight="850.0" style="-fx-background-color: #06202B;" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ats.StudentController">
    <children>
       <Pane prefHeight="85.0" prefWidth="1300.0" style="-fx-background-color: #27548A;">
          <children>
