--- a/Ats/src/style/style.css
+++ b/Ats/src/style/style.css
@@ -1,6 +1,14 @@
+@import url('https://fonts.googleapis.com/css2?family=Libre+Bodoni:ital,wght@0,400..700;1,400..700&display=swap');
+.font{
+  -fx-font-family: "Libre Bodoni", serif;
+  -fx-color: red;
+}
 .input{
     -fx-background-color: #fff;
 }
 .button{
     -fx-background-color: #0E2148;
+}
+.icon{
+
 }
