--- a/Ats/src/ats/teacher.fxml
+++ b/Ats/src/ats/teacher.fxml
@@ -1,7 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.control.TreeView?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
@@ -56,5 +59,15 @@
             </Text>
          </children>
       </Pane>
+      <Pane layoutY="85.0" prefHeight="766.0" prefWidth="234.0" style="-fx-background-color: #27548A;">
+         <children>
+            <Button layoutX="14.0" layoutY="14.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="201.0" style="-fx-background-color: #FFF;" text="Add Student" />
+         </children>
+      </Pane>
+      <TreeView fx:id="treeview" layoutX="269.0" layoutY="102.0" prefHeight="693.0" prefWidth="386.0" />
+      <TextField fx:id="textFild" layoutX="872.0" layoutY="174.0" prefHeight="25.0" prefWidth="254.0" promptText="Add Student" />
+      <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Text" />
+      <Text fill="WHITE" layoutX="793.0" layoutY="191.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Add Student " />
+      <Button fx:id="addButton" layoutX="872.0" layoutY="224.0" mnemonicParsing="false" onAction="#addButton" prefHeight="25.0" prefWidth="121.0" style="-fx-background-color: #fff;" text="Add Directory" />
    </children>
 </AnchorPane>
