--- a/Ats/src/ats/Student.fxml
+++ b/Ats/src/ats/Student.fxml
@@ -9,9 +9,9 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane id="AnchorPane" prefHeight="850.0" style="-fx-background-color: #06202B;" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ats.StudentController">
+<AnchorPane id="AnchorPane" prefHeight="572.0" prefWidth="897.0" style="-fx-background-color: #06202B;" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ats.StudentController">
    <children>
-      <Pane prefHeight="85.0" prefWidth="1300.0" style="-fx-background-color: #27548A;">
+      <Pane prefHeight="85.0" prefWidth="897.0" style="-fx-background-color: #27548A;">
          <children>
             <Label layoutX="23.0" layoutY="5.0" prefHeight="73.0" prefWidth="103.0" style="-fx-background-color: #FFF; -fx-background-radius: 3px;" />
             <ImageView fitHeight="64.0" fitWidth="92.0" layoutX="28.0" layoutY="10.0" pickOnBounds="true" preserveRatio="true">
@@ -19,26 +19,6 @@
                   <Image url="@../image/SMUCT%20Logo.png" />
                </image>
             </ImageView>
-            <Text fill="WHITE" layoutX="1085.0" layoutY="36.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Your ID :">
-               <font>
-                  <Font name="System Bold" size="12.0" />
-               </font>
-            </Text>
-            <Label fx:id="std_id" layoutX="1138.0" layoutY="21.0" prefHeight="20.0" prefWidth="137.0" style="-fx-background-color: #fff; -fx-background-radius: 3px;" text="{data:inport}" textAlignment="CENTER">
-               <padding>
-                  <Insets bottom="1.0" left="10.0" />
-               </padding>
-            </Label>
-            <Text fill="WHITE" layoutX="1070.0" layoutY="60.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Candidate : ">
-               <font>
-                  <Font name="System Bold" size="12.0" />
-               </font>
-            </Text>
-            <Label fx:id="std_Ast" layoutX="1138.0" layoutY="45.0" prefHeight="20.0" prefWidth="137.0" style="-fx-background-color: #fff; -fx-background-radius: 3px;" text="{data:inport}" textAlignment="CENTER">
-               <padding>
-                  <Insets bottom="1.0" left="10.0" />
-               </padding>
-            </Label>
             <Text fill="WHITE" layoutX="134.0" layoutY="32.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Shanto-Mariam University of Creative Technology">
                <font>
                   <Font name="System Bold" size="20.0" />
@@ -56,5 +36,25 @@
             </Text>
          </children>
       </Pane>
+      <Text fill="WHITE" layoutX="30.0" layoutY="109.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Your ID :">
+         <font>
+            <Font name="System Bold" size="12.0" />
+         </font>
+      </Text>
+      <Label fx:id="std_id" layoutX="83.0" layoutY="94.0" prefHeight="20.0" prefWidth="137.0" style="-fx-background-color: #fff; -fx-background-radius: 3px;" text="{data:inport}" textAlignment="CENTER">
+         <padding>
+            <Insets bottom="1.0" left="10.0" />
+         </padding>
+      </Label>
+      <Text fill="WHITE" layoutX="15.0" layoutY="133.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Candidate : ">
+         <font>
+            <Font name="System Bold" size="12.0" />
+         </font>
+      </Text>
+      <Label fx:id="std_Ast" layoutX="83.0" layoutY="118.0" prefHeight="20.0" prefWidth="137.0" style="-fx-background-color: #fff; -fx-background-radius: 3px;" text="{data:inport}" textAlignment="CENTER">
+         <padding>
+            <Insets bottom="1.0" left="10.0" />
+         </padding>
+      </Label>
    </children>
 </AnchorPane>
