--- a/Ats/src/ats/Student.fxml
+++ b/Ats/src/ats/Student.fxml
@@ -2,6 +2,8 @@
 
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TreeTableColumn?>
+<?import javafx.scene.control.TreeTableView?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
@@ -9,9 +11,9 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane id="AnchorPane" prefHeight="572.0" prefWidth="897.0" style="-fx-background-color: #06202B;" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ats.StudentController">
+<AnchorPane id="AnchorPane" prefHeight="572.0" prefWidth="808.0" style="-fx-background-color: #fff;" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ats.StudentController">
    <children>
-      <Pane prefHeight="85.0" prefWidth="897.0" style="-fx-background-color: #27548A;">
+      <Pane prefHeight="85.0" prefWidth="827.0" style="-fx-background-color: #27548A;">
          <children>
             <Label layoutX="23.0" layoutY="5.0" prefHeight="73.0" prefWidth="103.0" style="-fx-background-color: #FFF; -fx-background-radius: 3px;" />
             <ImageView fitHeight="64.0" fitWidth="92.0" layoutX="28.0" layoutY="10.0" pickOnBounds="true" preserveRatio="true">
@@ -36,25 +38,46 @@
             </Text>
          </children>
       </Pane>
-      <Text fill="WHITE" layoutX="30.0" layoutY="109.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Your ID :">
+      <Text layoutX="29.0" layoutY="114.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Your ID :">
          <font>
             <Font name="System Bold" size="12.0" />
          </font>
       </Text>
-      <Label fx:id="std_id" layoutX="83.0" layoutY="94.0" prefHeight="20.0" prefWidth="137.0" style="-fx-background-color: #fff; -fx-background-radius: 3px;" text="{data:inport}" textAlignment="CENTER">
+      <Label fx:id="std_id" layoutX="82.0" layoutY="99.0" prefHeight="20.0" prefWidth="137.0" style="-fx-background-color: #111; -fx-background-radius: 3px; -fx-background-color: ;" text="{data:inport}" textAlignment="CENTER" textFill="WHITE">
          <padding>
             <Insets bottom="1.0" left="10.0" />
          </padding>
       </Label>
-      <Text fill="WHITE" layoutX="15.0" layoutY="133.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Candidate : ">
+      <Text layoutX="14.0" layoutY="138.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Candidate : ">
          <font>
             <Font name="System Bold" size="12.0" />
          </font>
       </Text>
-      <Label fx:id="std_Ast" layoutX="83.0" layoutY="118.0" prefHeight="20.0" prefWidth="137.0" style="-fx-background-color: #fff; -fx-background-radius: 3px;" text="{data:inport}" textAlignment="CENTER">
+      <Label fx:id="std_Ast" layoutX="82.0" layoutY="123.0" prefHeight="20.0" prefWidth="137.0" style="-fx-background-color: #111; -fx-background-radius: 3px; -fx-background-color: ;" text="{data:inport}" textAlignment="CENTER" textFill="WHITE">
          <padding>
             <Insets bottom="1.0" left="10.0" />
          </padding>
       </Label>
+      <ImageView accessibleText="home" fitHeight="147.0" fitWidth="180.0" layoutX="647.0" layoutY="85.0" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@../image/undraw_dev-productivity_5wps.png" />
+         </image>
+      </ImageView>
+      <ImageView accessibleText="home" fitHeight="56.0" fitWidth="49.0" layoutX="230.0" layoutY="98.0" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@../image/icons8-student-94.png" />
+         </image>
+      </ImageView>
+      <ImageView accessibleText="home" fitHeight="163.0" fitWidth="318.0" layoutX="4.0" layoutY="409.0" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@../image/undraw_learning-sketchingsh.png" />
+         </image>
+      </ImageView>
+      <TreeTableView layoutX="279.0" layoutY="222.0" prefHeight="200.0" prefWidth="200.0">
+        <columns>
+          <TreeTableColumn prefWidth="75.0" text="C1" />
+          <TreeTableColumn prefWidth="75.0" text="C2" />
+        </columns>
+      </TreeTableView>
    </children>
 </AnchorPane>
