--- a/Ats/src/ats/teacher.fxml
+++ b/Ats/src/ats/teacher.fxml
@@ -12,7 +12,7 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane id="AnchorPane" prefHeight="766.0" prefWidth="795.0" style="-fx-background-color: #06202B;" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ats.TeacherController">
+<AnchorPane id="AnchorPane" prefHeight="682.0" prefWidth="795.0" style="-fx-background-color: #06202B;" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ats.TeacherController">
    <children>
       <Pane prefHeight="85.0" prefWidth="795.0" style="-fx-background-color: #27548A;">
          <children>
@@ -39,35 +39,44 @@
             </Text>
          </children>
       </Pane>
-      <Pane layoutY="85.0" prefHeight="680.0" prefWidth="234.0" style="-fx-background-color: #27548A;">
+      <Pane layoutY="85.0" prefHeight="607.0" prefWidth="234.0" style="-fx-background-color: #183B4E;">
          <children>
-            <Button layoutX="17.0" layoutY="81.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="201.0" style="-fx-background-color: #FFF;" text="Add Student" />
-            <Text fill="WHITE" layoutX="30.0" layoutY="29.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Your ID :">
+            <Text fill="WHITE" layoutX="30.0" layoutY="124.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Your ID :">
                <font>
                   <Font name="System Bold" size="12.0" />
                </font>
             </Text>
-            <Label fx:id="tec_Id" layoutX="83.0" layoutY="14.0" prefHeight="20.0" prefWidth="137.0" style="-fx-background-color: #fff; -fx-background-radius: 3px;" text="{data:inport}" textAlignment="CENTER">
+            <Label fx:id="tec_Id" layoutX="83.0" layoutY="109.0" prefHeight="20.0" prefWidth="137.0" style="-fx-background-color: #fff; -fx-background-radius: 3px;" text="{data:inport}" textAlignment="CENTER">
                <padding>
                   <Insets bottom="1.0" left="10.0" />
                </padding>
             </Label>
-            <Text fill="WHITE" layoutX="15.0" layoutY="53.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Candidate : ">
+            <Text fill="WHITE" layoutX="15.0" layoutY="148.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Candidate : ">
                <font>
                   <Font name="System Bold" size="12.0" />
                </font>
             </Text>
-            <Label fx:id="tec_Ast" layoutX="83.0" layoutY="38.0" prefHeight="20.0" prefWidth="137.0" style="-fx-background-color: #fff; -fx-background-radius: 3px;" text="{data:inport}" textAlignment="CENTER">
+            <Label fx:id="tec_Ast" layoutX="83.0" layoutY="133.0" prefHeight="20.0" prefWidth="137.0" style="-fx-background-color: #fff; -fx-background-radius: 3px;" text="{data:inport}" textAlignment="CENTER">
                <padding>
                   <Insets bottom="1.0" left="10.0" />
                </padding>
             </Label>
+            <ImageView accessibleText="home" fitHeight="85.0" fitWidth="83.0" layoutX="76.0" layoutY="14.0" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@../image/icons8-teacher-64.png" />
+               </image>
+            </ImageView>
+            <ImageView accessibleText="home" fitHeight="183.0" fitWidth="234.0" layoutY="476.0" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@../image/ai-generated-9295105_1280.jpg" />
+               </image>
+            </ImageView>
          </children>
       </Pane>
-      <TreeView fx:id="treeview" layoutX="269.0" layoutY="102.0" prefHeight="536.0" prefWidth="354.0" />
-      <TextField fx:id="textFild" layoutX="346.0" layoutY="662.0" prefHeight="25.0" prefWidth="254.0" promptText="Add Student" />
+      <TreeView fx:id="treeview" layoutX="346.0" layoutY="100.0" prefHeight="451.0" prefWidth="289.0" />
+      <TextField fx:id="textFild" layoutX="349.0" layoutY="570.0" prefHeight="25.0" prefWidth="254.0" promptText="Add Student" />
       <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Text" />
-      <Text fill="WHITE" layoutX="269.0" layoutY="679.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Add Student " />
-      <Button fx:id="addButton" layoutX="346.0" layoutY="694.0" mnemonicParsing="false" onAction="#addButton" prefHeight="25.0" prefWidth="121.0" style="-fx-background-color: #fff;" text="Add Directory" />
+      <Text fill="WHITE" layoutX="272.0" layoutY="587.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Add Student " />
+      <Button fx:id="addButton" layoutX="349.0" layoutY="602.0" mnemonicParsing="false" onAction="#addButton" prefHeight="25.0" prefWidth="121.0" style="-fx-background-color: #fff;" text="Add Directory" />
    </children>
 </AnchorPane>
