--- a/Ats/src/ats/Student.fxml
+++ b/Ats/src/ats/Student.fxml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TreeTableColumn?>
 <?import javafx.scene.control.TreeTableView?>
@@ -36,6 +37,12 @@
                   <Font size="11.0" />
                </font>
             </Text>
+            <Button fx:id="logout_btn" layoutX="738.0" layoutY="29.0" mnemonicParsing="false" onAction="#handleLogout" prefHeight="27.0" prefWidth="67.0" style="-fx-background-color: #fff;" text="Logout" />
+            <ImageView accessibleText="home" fitHeight="55.0" fitWidth="31.0" layoutX="715.0" layoutY="27.0" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@../image/icons8-logout.gif" />
+               </image>
+            </ImageView>
          </children>
       </Pane>
       <Text layoutX="29.0" layoutY="114.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Your ID :">
