--- a/Ats/src/ats/teacher.fxml
+++ b/Ats/src/ats/teacher.fxml
@@ -3,8 +3,6 @@
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.control.TextField?>
-<?import javafx.scene.control.TreeView?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
@@ -37,6 +35,12 @@
                   <Font size="11.0" />
                </font>
             </Text>
+            <Button fx:id="logout_btn" layoutX="708.0" layoutY="27.0" mnemonicParsing="false" onAction="#handleLogout" prefHeight="27.0" prefWidth="67.0" style="-fx-background-color: #fff;" text="Logout" />
+            <ImageView accessibleText="home" fitHeight="55.0" fitWidth="31.0" layoutX="685.0" layoutY="25.0" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@../image/icons8-logout.gif" />
+               </image>
+            </ImageView>
          </children>
       </Pane>
       <Pane layoutY="85.0" prefHeight="607.0" prefWidth="234.0" style="-fx-background-color: #183B4E;">
@@ -73,10 +77,6 @@
             </ImageView>
          </children>
       </Pane>
-      <TreeView fx:id="treeview" layoutX="346.0" layoutY="100.0" prefHeight="451.0" prefWidth="289.0" />
-      <TextField fx:id="textFild" layoutX="349.0" layoutY="570.0" prefHeight="25.0" prefWidth="254.0" promptText="Add Student" />
       <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Text" />
-      <Text fill="WHITE" layoutX="272.0" layoutY="587.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Add Student " />
-      <Button fx:id="addButton" layoutX="349.0" layoutY="602.0" mnemonicParsing="false" onAction="#addButton" prefHeight="25.0" prefWidth="121.0" style="-fx-background-color: #fff;" text="Add Directory" />
    </children>
 </AnchorPane>
