--- a/Ats/src/ats/FXMLDocument.fxml
+++ b/Ats/src/ats/FXMLDocument.fxml
@@ -9,6 +9,7 @@
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.Pane?>
+<?import javafx.scene.shape.Line?>
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
@@ -53,6 +54,17 @@
                   <Font name="System Bold" size="12.0" />
                </font>
             </Label>
+            <ImageView fitHeight="164.0" fitWidth="160.0" layoutX="-30.0" layoutY="391.0">
+               <image>
+                  <Image url="@../image/Student_1.gif" />
+               </image>
+            </ImageView>
+            <Line endX="100.0" layoutX="100.0" layoutY="542.0" startX="-100.0" />
+            <ImageView fitHeight="108.0" fitWidth="121.0" layoutX="178.0" layoutY="112.0">
+               <image>
+                  <Image url="@../image/Welcome.gif" />
+               </image>
+            </ImageView>
          </children></Pane>
       <TextField fx:id="userID" layoutX="668.0" layoutY="307.0" prefHeight="25.0" prefWidth="194.0" promptText="User ID" styleClass="input" stylesheets="@../style/style.css" />
       <TextField fx:id="userPass" layoutX="668.0" layoutY="359.0" prefHeight="25.0" prefWidth="194.0" promptText="User Password" stylesheets="@../style/style.css">
