--- a/Ats/src/ats/admin.fxml
+++ b/Ats/src/ats/admin.fxml
@@ -45,29 +45,34 @@
       </Pane>
       <Pane layoutY="85.0" prefHeight="485.0" prefWidth="234.0" style="-fx-background-color: #183B4E;">
          <children>
-            <ImageView accessibleText="home" fitHeight="55.0" fitWidth="49.0" layoutX="93.0" layoutY="23.0" pickOnBounds="true" preserveRatio="true">
+            <ImageView accessibleText="home" fitHeight="55.0" fitWidth="49.0" layoutX="94.0" layoutY="65.0" pickOnBounds="true" preserveRatio="true">
                <image>
                   <Image url="@../image/icons8-id-card.gif" />
                </image>
             </ImageView>
-            <Text fill="WHITE" layoutX="29.0" layoutY="94.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Your ID :">
+            <Text fill="WHITE" layoutX="30.0" layoutY="136.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Your ID :">
                <font>
                   <Font name="System Bold" size="12.0" />
                </font></Text>
-            <Label fx:id="admin_Id" layoutX="82.0" layoutY="79.0" prefHeight="20.0" prefWidth="137.0" style="-fx-background-color: #fff; -fx-background-radius: 3px;" text="{data:inport}" textAlignment="CENTER">
+            <Label fx:id="admin_Id" layoutX="83.0" layoutY="121.0" prefHeight="20.0" prefWidth="137.0" style="-fx-background-color: #fff; -fx-background-radius: 3px;" text="{data:inport}" textAlignment="CENTER">
                <padding>
                   <Insets bottom="1.0" left="10.0" />
                </padding></Label>
-            <Text fill="WHITE" layoutX="14.0" layoutY="118.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Candidate : ">
+            <Text fill="WHITE" layoutX="15.0" layoutY="160.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Candidate : ">
                <font>
                   <Font name="System Bold" size="12.0" />
                </font>
             </Text>
-            <Label fx:id="admin_Ast" layoutX="82.0" layoutY="103.0" prefHeight="20.0" prefWidth="137.0" style="-fx-background-color: #fff; -fx-background-radius: 3px;" text="{data:inport}" textAlignment="CENTER">
+            <Label fx:id="admin_Ast" layoutX="83.0" layoutY="145.0" prefHeight="20.0" prefWidth="137.0" style="-fx-background-color: #fff; -fx-background-radius: 3px;" text="{data:inport}" textAlignment="CENTER">
                <padding>
                   <Insets bottom="1.0" left="10.0" />
                </padding>
             </Label>
+            <ImageView accessibleText="home" fitHeight="154.0" fitWidth="161.0" layoutX="41.0" layoutY="259.0" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@../image/Welcome%20Animation.gif" />
+               </image>
+            </ImageView>
          </children>
       </Pane>
       <Pane fx:id="admin_All_button" layoutX="275.0" layoutY="132.0" prefHeight="366.0" prefWidth="511.0">
